basic layout css html

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <form action="">
+        <label for="userInput">Where would you like to view the weather?</label>
+        <input type="text" name="userInput" id="userInput" placeholder="ex... 'London'">
+      </form>
+      <div class="outputBox">
+        <h1>Weather Info</h1>
+        <h2 class="city"></h2>
+        <h3 class="condition"></h3>
+        <h3 class="temperature"></h3>
+      </div>
+    </div>
+  </body>
 </html>
