farenheit or celsius radio buttons

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,18 @@
       <form action="">
         <label for="userInput">Where would you like to view the weather?</label>
         <input type="text" name="userInput" id="userInput" placeholder="ex... 'London'">
+
+        <div class="tempSystemContainer">
+          <label for="celsius">
+            <input type="radio" name="choice" id="celsius">
+            Celsius
+          </label>
+
+          <label for="farenheit">
+            <input type="radio" name="choice" id="farenheit">
+            Farenheit
+          </label>
+        </div>
       </form>
       <div class="outputBox">
         <h1>Weather Info</h1>
