farenheit can be converted to celsius and display

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
 
         <div class="tempSystemContainer">
           <label for="celsius">
-            <input type="radio" name="choice" id="celsius">
+            <input type="radio" name="choice" id="celsius" checked>
             Celsius
           </label>
 
